--- a/src/styles.css
+++ b/src/styles.css
@@ -30,12 +30,12 @@ body {
 }
 
 .day-of-week {
-  font-size: 1.5rem;
+  /*font-size: 1.5rem;*/
   text-transform: uppercase;
 }
 
 .date {
-  font-size: 4.5rem;;
+  /*font-size: 4.5rem;*/
 }
 
 .cloudy {
@@ -76,20 +76,21 @@ body {
 
 .bar {
   background: var(--background);
-  height: 100vh;
+  /*height: 100vh;*/
   border-radius: 50px;
   position: relative;
   /*width: 164px;*/
-  padding-top: 252px;
+  padding: 30% 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1), 11px 4px 34px rgba(32, 77, 92, 0.25);
 }
 
 .temperature {
   font-family: 'Oswald', sans-serif;
   color: var(--temperature);
-  font-size: 7rem;
+  font-size: 5rem;
   position: relative;
-  top:-20%;
+  padding: 0 50px;
+  /*top:-20%;*/
   /*padding-bottom: 30px;*/
 }
 
